--- a/Data_Logger.ipynb
+++ b/Data_Logger.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNpEvJRAYYthBRFh36PTfX",
+      "authorship_tag": "ABX9TyNvRLc8oayH3ayBvmPfBjRI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
         "pdf_files = [f for f in os.listdir(datalogger_dir) if f.endswith('.pdf')]\n",
         "\n",
         "all_processed_dataframes = []\n",
-        "total_tor_data = [] # To store total TOR and min/max temp/datetime per logger\n",
+        "total_tor_data = []\n",
         "\n",
         "# --- GET USER INPUT FOR GLOBAL FILTERING ---\n",
         "print(\"\\nStep 1: Enter Global Cut-off Time for all loggers\")\n",
@@ -57,17 +57,26 @@
         "        input_time_str = input(\"Enter cut-off time (HH:MM): \")\n",
         "\n",
         "        # Combine and convert to a datetime object\n",
-        "        cutoff_str = f\"{input_date_str} {input_time_str}:00\" # Add :00 for parsing\n",
+        "        cutoff_str = f\"{input_date_str} {input_time_str}:00\"\n",
         "        global_cutoff_datetime = pd.to_datetime(cutoff_str, format='%Y/%m/%d %H:%M:%S')\n",
-        "        break # Exit loop if input is valid\n",
+        "        break\n",
         "    except ValueError:\n",
         "        print(\"Invalid format. Please try again.\")\n",
         "\n",
+        "# --- GET USER INPUT FOR TOR TEMPERATURE THRESHOLD ---\n",
+        "print(\"\\nStep 2: Enter the temperature threshold for Time Out of Refrigerator (TOR)\")\n",
+        "while True:\n",
+        "    try:\n",
+        "        tor_threshold_temp = float(input(\"Enter TOR temperature threshold (°C): \"))\n",
+        "        break\n",
+        "    except ValueError:\n",
+        "        print(\"Invalid input. Please enter a number.\")\n",
         "\n",
-        "# --- 2. PROCESS EACH PDF FILE ---\n",
+        "\n",
+        "# --- 3. PROCESS EACH PDF FILE ---\n",
         "for pdf_file in pdf_files:\n",
         "    pdf_path = os.path.join(datalogger_dir, pdf_file)\n",
-        "    logger_id = pdf_file # Use filename as Logger ID\n",
+        "    logger_id = pdf_file\n",
         "\n",
         "    print(f\"\\nProcessing file: {logger_id}\")\n",
         "\n",
@@ -76,7 +85,7 @@
         "        dfs = tabula.read_pdf(pdf_path, pages=\"2-5\", stream=True, multiple_tables=True)\n",
         "    except Exception as e:\n",
         "        print(f\"Error reading PDF {pdf_file}: {e}\")\n",
-        "        continue # Skip to the next file if reading fails\n",
+        "        continue\n",
         "\n",
         "    # --- RESHAPE DATA FROM WIDE TO LONG FORMAT ---\n",
         "    all_reshaped_chunks = []\n",
@@ -128,7 +137,7 @@
         "        continue\n",
         "\n",
         "    # --- FILTER THE DATAFRAME USING GLOBAL CUTOFF ---\n",
-        "    print(f\"\\nStep 3: Filtering data to remove records after {global_cutoff_datetime} for {logger_id}...\")\n",
+        "    print(f\"\\nStep 4: Filtering data to remove records after {global_cutoff_datetime} for {logger_id}...\")\n",
         "\n",
         "    # Keep only the rows where the datetime is less than or equal to the user's input\n",
         "    datalogger_filtered = datalogger[datalogger['datetime'] <= global_cutoff_datetime].copy()\n",
@@ -142,12 +151,13 @@
         "    # --- Calculate Min and Max Temperature and their datetimes for the filtered data ---\n",
         "    min_temp = datalogger_filtered['temperature'].min()\n",
         "    max_temp = datalogger_filtered['temperature'].max()\n",
-        "    min_temp_datetime = datalogger_filtered[datalogger_filtered['temperature'] == min_temp]['datetime'].min() # Get the earliest datetime if multiple min temps\n",
-        "    max_temp_datetime = datalogger_filtered[datalogger_filtered['temperature'] == max_temp]['datetime'].min() # Get the earliest datetime if multiple max temps\n",
+        "    min_temp_datetime = datalogger_filtered[datalogger_filtered['temperature'] == min_temp]['datetime'].min()\n",
+        "    max_temp_datetime = datalogger_filtered[datalogger_filtered['temperature'] == max_temp]['datetime'].min()\n",
         "\n",
         "\n",
         "    # --- TOR ANALYSIS ---\n",
-        "    datalogger_filtered['is_tor'] = datalogger_filtered['temperature'] > 8\n",
+        "    print(f\"\\nStep 5: Performing TOR analysis for {logger_id} using threshold {tor_threshold_temp}°C...\")\n",
+        "    datalogger_filtered['is_tor'] = datalogger_filtered['temperature'] > tor_threshold_temp\n",
         "\n",
         "    tor_periods = []\n",
         "    start_time = None\n",
@@ -167,7 +177,7 @@
         "\n",
         "    tor_df = pd.DataFrame(tor_periods)\n",
         "\n",
-        "    total_tor_file = pd.Timedelta(seconds=0) # Initialize total TOR for this file\n",
+        "    total_tor_file = pd.Timedelta(seconds=0)\n",
         "    if not tor_df.empty:\n",
         "        tor_df['Excursion duration'] = tor_df['TOR stop'] - tor_df['TOR start']\n",
         "\n",
@@ -212,12 +222,12 @@
         "    })\n",
         "\n",
         "\n",
-        "# --- 3. COMBINE DATAFRAMES ---\n",
+        "# --- 4. COMBINE DATAFRAMES ---\n",
         "if all_processed_dataframes:\n",
         "    combined_datalogger_df = pd.concat(all_processed_dataframes, ignore_index=True)\n",
         "    combined_datalogger_df = combined_datalogger_df.reset_index(drop=True)\n",
         "\n",
-        "    # --- 4. CALCULATE AND FORMAT TOTAL TOR PER LOGGER ---\n",
+        "    # --- 5. CALCULATE AND FORMAT TOTAL TOR PER LOGGER ---\n",
         "    total_tor_summary_df = pd.DataFrame(total_tor_data)\n",
         "\n",
         "    def format_timedelta_as_ddhhmm(td):\n",
@@ -232,7 +242,7 @@
         "    total_tor_summary_df['Total TOR'] = total_tor_summary_df['Total TOR'].apply(format_timedelta_as_ddhhmm)\n",
         "\n",
         "\n",
-        "    # --- 5. FINALIZE AND DISPLAY RESULTS ---\n",
+        "    # --- 6. FINALIZE AND DISPLAY RESULTS ---\n",
         "    # Add a sequential number column for each Logger ID in the combined_datalogger_df\n",
         "    combined_datalogger_df['Number'] = combined_datalogger_df.groupby('Logger ID').cumcount() + 1\n",
         "\n",
@@ -256,11 +266,11 @@
         "    total_tor_summary_df = total_tor_summary_df[['Logger ID', 'Total TOR', 'Min Temperature', 'Min Temp Datetime', 'Max Temperature', 'Max Temp Datetime']]\n",
         "    display(total_tor_summary_df)\n",
         "\n",
-        "    # --- 6. EXPORT TO EXCEL ---\n",
+        "    # --- 7. EXPORT TO EXCEL ---\n",
         "    output_excel_path = \"/content/datalogger/tor_analysis_results.xlsx\"\n",
         "    with pd.ExcelWriter(output_excel_path) as writer:\n",
         "        final_combined_df.to_excel(writer, sheet_name='Excursion Details', index=False)\n",
-        "        total_tor_summary_df.to_excel(writer, sheet_name='Total TOR Summary', index=False) # Export summary df\n",
+        "        total_tor_summary_df.to_excel(writer, sheet_name='Total TOR Summary', index=False)\n",
         "\n",
         "    print(f\"\\nResults exported successfully to '{output_excel_path}'\")\n",
         "\n",
