--- a/Data_Logger.ipynb
+++ b/Data_Logger.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvRLc8oayH3ayBvmPfBjRI",
+      "authorship_tag": "ABX9TyNAKRUEXuzR2zC9Ua4xh9Df",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,12 +49,12 @@
         "total_tor_data = []\n",
         "\n",
         "# --- GET USER INPUT FOR GLOBAL FILTERING ---\n",
-        "print(\"\\nStep 1: Enter Global Cut-off Time for all loggers\")\n",
+        "print(\"\\nStep 1: Thời gian nhập nguyên liệu vào kho\")\n",
         "while True:\n",
         "    try:\n",
         "        # Get date and time from user in YYYY/MM/DD HH:MM format\n",
-        "        input_date_str = input(\"Enter cut-off date (YYYY/MM/DD): \")\n",
-        "        input_time_str = input(\"Enter cut-off time (HH:MM): \")\n",
+        "        input_date_str = input(\"Nhập ngày (YYYY/MM/DD): \")\n",
+        "        input_time_str = input(\"Nhập giờ (HH:MM): \")\n",
         "\n",
         "        # Combine and convert to a datetime object\n",
         "        cutoff_str = f\"{input_date_str} {input_time_str}:00\"\n",
