--- a/Data_Logger.ipynb
+++ b/Data_Logger.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNAKRUEXuzR2zC9Ua4xh9Df",
+      "authorship_tag": "ABX9TyOWLFl+V/Z/HZoAoft2n19j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,16 +61,16 @@
         "        global_cutoff_datetime = pd.to_datetime(cutoff_str, format='%Y/%m/%d %H:%M:%S')\n",
         "        break\n",
         "    except ValueError:\n",
-        "        print(\"Invalid format. Please try again.\")\n",
+        "        print(\"Sai format. Thử lại.\")\n",
         "\n",
         "# --- GET USER INPUT FOR TOR TEMPERATURE THRESHOLD ---\n",
-        "print(\"\\nStep 2: Enter the temperature threshold for Time Out of Refrigerator (TOR)\")\n",
+        "print(\"\\nStep 2: Nhiệt độ giới hạn của nguyên liệu\")\n",
         "while True:\n",
         "    try:\n",
-        "        tor_threshold_temp = float(input(\"Enter TOR temperature threshold (°C): \"))\n",
+        "        tor_threshold_temp = float(input(\"Nhập nhiệt độ (°C): \"))\n",
         "        break\n",
         "    except ValueError:\n",
-        "        print(\"Invalid input. Please enter a number.\")\n",
+        "        print(\"Sai rồi. Thử lại.\")\n",
         "\n",
         "\n",
         "# --- 3. PROCESS EACH PDF FILE ---\n",
@@ -78,13 +78,13 @@
         "    pdf_path = os.path.join(datalogger_dir, pdf_file)\n",
         "    logger_id = pdf_file\n",
         "\n",
-        "    print(f\"\\nProcessing file: {logger_id}\")\n",
+        "    print(f\"\\nĐang xử lý file: {logger_id}\")\n",
         "\n",
         "    # --- EXTRACT TABLES FROM PDF ---\n",
         "    try:\n",
         "        dfs = tabula.read_pdf(pdf_path, pages=\"2-5\", stream=True, multiple_tables=True)\n",
         "    except Exception as e:\n",
-        "        print(f\"Error reading PDF {pdf_file}: {e}\")\n",
+        "        print(f\"Lỗi đọc file PDF {pdf_file}: {e}\")\n",
         "        continue\n",
         "\n",
         "    # --- RESHAPE DATA FROM WIDE TO LONG FORMAT ---\n",
@@ -96,7 +96,7 @@
         "                chunk.columns = ['raw_col1', 'raw_col2', 'raw_col3']\n",
         "                all_reshaped_chunks.append(chunk)\n",
         "    if not all_reshaped_chunks:\n",
-        "        print(f\"No data chunks found in {pdf_file}. Skipping.\")\n",
+        "        # print(f\"No data chunks found in {pdf_file}. Skipping.\")\n",
         "        continue\n",
         "    raw_long_df = pd.concat(all_reshaped_chunks, ignore_index=True)\n",
         "\n",
@@ -117,7 +117,7 @@
         "                'temperature': temp_val})\n",
         "\n",
         "    if not all_records:\n",
-        "        print(f\"No records found in {pdf_file}. Skipping.\")\n",
+        "        # print(f\"No records found in {pdf_file}. Skipping.\")\n",
         "        continue\n",
         "\n",
         "    # --- CREATE THE DATAFRAME ---\n",
@@ -133,19 +133,19 @@
         "    datalogger = datalogger[['datetime', 'temperature']].reset_index(drop=True)\n",
         "\n",
         "    if datalogger.empty:\n",
-        "        print(f\"No valid data remaining in {pdf_file} after cleaning. Skipping.\")\n",
+        "        # print(f\"No valid data remaining in {pdf_file} after cleaning. Skipping.\")\n",
         "        continue\n",
         "\n",
         "    # --- FILTER THE DATAFRAME USING GLOBAL CUTOFF ---\n",
-        "    print(f\"\\nStep 4: Filtering data to remove records after {global_cutoff_datetime} for {logger_id}...\")\n",
+        "    # print(f\"\\nStep 4: Filtering data to remove records after {global_cutoff_datetime} for {logger_id}...\")\n",
         "\n",
         "    # Keep only the rows where the datetime is less than or equal to the user's input\n",
         "    datalogger_filtered = datalogger[datalogger['datetime'] <= global_cutoff_datetime].copy()\n",
         "\n",
-        "    print(f\"Filtering complete for {logger_id}. {len(datalogger_filtered)} records remaining.\")\n",
+        "    # print(f\"Filtering complete for {logger_id}. {len(datalogger_filtered)} records remaining.\")\n",
         "\n",
         "    if datalogger_filtered.empty:\n",
-        "        print(f\"No data remaining after filtering for {logger_id}. Skipping TOR analysis.\")\n",
+        "        # print(f\"No data remaining after filtering for {logger_id}. Skipping TOR analysis.\")\n",
         "        continue\n",
         "\n",
         "    # --- Calculate Min and Max Temperature and their datetimes for the filtered data ---\n",
@@ -156,7 +156,7 @@
         "\n",
         "\n",
         "    # --- TOR ANALYSIS ---\n",
-        "    print(f\"\\nStep 5: Performing TOR analysis for {logger_id} using threshold {tor_threshold_temp}°C...\")\n",
+        "    print(f\"\\nStep 5: Thực hiện TOR analysis cho Logger ID {logger_id} với giới hạn nhiệt độ {tor_threshold_temp}°C...\")\n",
         "    datalogger_filtered['is_tor'] = datalogger_filtered['temperature'] > tor_threshold_temp\n",
         "\n",
         "    tor_periods = []\n",
@@ -209,7 +209,7 @@
         "\n",
         "\n",
         "    else:\n",
-        "        print(f\"No TOR periods found in {pdf_file} after filtering.\")\n",
+        "        # print(f\"No TOR periods found in {pdf_file} after filtering.\")\n",
         "\n",
         "    # Store total TOR, min temp, max temp, and their datetimes for this logger\n",
         "    total_tor_data.append({\n",
@@ -258,7 +258,7 @@
         "    # Rearrange columns to have 'Logger ID' first, then 'Number'\n",
         "    final_combined_df = combined_datalogger_df[['Logger ID', 'Number', 'TOR start', 'temperature at tor start', 'TOR stop', 'temperature at tor stop', 'Excursion duration']]\n",
         "\n",
-        "    print(\"--- Combined TOR Excursion Details with Logger ID, Number, and Temperatures ---\")\n",
+        "    # print(\"--- Combined TOR Excursion Details with Logger ID, Number, and Temperatures ---\")\n",
         "    display(final_combined_df)\n",
         "\n",
         "    print(\"\\n--- Total Time Out of Refrigerator (TOR) per Logger ID, Min/Max Temperature, and Datetime ---\")\n",
