--- a/Data_Logger.ipynb
+++ b/Data_Logger.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOWLFl+V/Z/HZoAoft2n19j",
+      "authorship_tag": "ABX9TyOV2jz0edxOZoHKG4w9Cz2I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,6 +210,7 @@
         "\n",
         "    else:\n",
         "        # print(f\"No TOR periods found in {pdf_file} after filtering.\")\n",
+        "        total_tor_file = pd.Timedelta(seconds=0)\n",
         "\n",
         "    # Store total TOR, min temp, max temp, and their datetimes for this logger\n",
         "    total_tor_data.append({\n",
