--- a/Data_Logger.ipynb
+++ b/Data_Logger.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOV2jz0edxOZoHKG4w9Cz2I",
+      "authorship_tag": "ABX9TyP5ffofGRJJopUT2ZkFV2tp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "import re\n",
         "import os\n",
         "\n",
-        "# --- 1. SETUP DIRECTORY AND LIST PDF FILES ---\n",
+        "# --- SETUP DIRECTORY AND LIST PDF FILES ---\n",
         "datalogger_dir = '/content/datalogger/'\n",
         "os.makedirs(datalogger_dir, exist_ok=True)\n",
         "pdf_files = [f for f in os.listdir(datalogger_dir) if f.endswith('.pdf')]\n",
@@ -72,8 +72,7 @@
         "    except ValueError:\n",
         "        print(\"Sai rồi. Thử lại.\")\n",
         "\n",
-        "\n",
-        "# --- 3. PROCESS EACH PDF FILE ---\n",
+        "# --- PROCESS EACH PDF FILE ---\n",
         "for pdf_file in pdf_files:\n",
         "    pdf_path = os.path.join(datalogger_dir, pdf_file)\n",
         "    logger_id = pdf_file\n",
@@ -154,7 +153,6 @@
         "    min_temp_datetime = datalogger_filtered[datalogger_filtered['temperature'] == min_temp]['datetime'].min()\n",
         "    max_temp_datetime = datalogger_filtered[datalogger_filtered['temperature'] == max_temp]['datetime'].min()\n",
         "\n",
-        "\n",
         "    # --- TOR ANALYSIS ---\n",
         "    print(f\"\\nStep 5: Thực hiện TOR analysis cho Logger ID {logger_id} với giới hạn nhiệt độ {tor_threshold_temp}°C...\")\n",
         "    datalogger_filtered['is_tor'] = datalogger_filtered['temperature'] > tor_threshold_temp\n",
@@ -198,8 +196,8 @@
         "        # Rearrange columns\n",
         "        final_tor_df = tor_df[['TOR start', 'temperature at tor start', 'TOR stop', 'temperature at tor stop', 'Excursion duration']]\n",
         "\n",
-        "        # Add Logger ID\n",
-        "        final_tor_df['Logger ID'] = logger_id\n",
+        "        # Add Logger ID and remove .pdf extension\n",
+        "        final_tor_df['Logger ID'] = logger_id.replace('.pdf', '')\n",
         "\n",
         "        all_processed_dataframes.append(final_tor_df)\n",
         "\n",
@@ -214,7 +212,7 @@
         "\n",
         "    # Store total TOR, min temp, max temp, and their datetimes for this logger\n",
         "    total_tor_data.append({\n",
-        "        'Logger ID': logger_id,\n",
+        "        'Logger ID': logger_id.replace('.pdf', ''),\n",
         "        'Total TOR': total_tor_file,\n",
         "        'Min Temperature': min_temp,\n",
         "        'Min Temp Datetime': min_temp_datetime,\n",
@@ -222,8 +220,7 @@
         "        'Max Temp Datetime': max_temp_datetime\n",
         "    })\n",
         "\n",
-        "\n",
-        "# --- 4. COMBINE DATAFRAMES ---\n",
+        "# --- COMBINE DATAFRAMES ---\n",
         "if all_processed_dataframes:\n",
         "    combined_datalogger_df = pd.concat(all_processed_dataframes, ignore_index=True)\n",
         "    combined_datalogger_df = combined_datalogger_df.reset_index(drop=True)\n",
@@ -242,24 +239,14 @@
         "    # Format the total TOR\n",
         "    total_tor_summary_df['Total TOR'] = total_tor_summary_df['Total TOR'].apply(format_timedelta_as_ddhhmm)\n",
         "\n",
-        "\n",
-        "    # --- 6. FINALIZE AND DISPLAY RESULTS ---\n",
+        "    # --- FINALIZE AND DISPLAY RESULTS ---\n",
         "    # Add a sequential number column for each Logger ID in the combined_datalogger_df\n",
         "    combined_datalogger_df['Number'] = combined_datalogger_df.groupby('Logger ID').cumcount() + 1\n",
-        "\n",
-        "    # Format temperature columns to 2 decimal places in the combined_datalogger_df\n",
-        "    combined_datalogger_df['temperature at tor start'] = combined_datalogger_df['temperature at tor start'].round(2)\n",
-        "    combined_datalogger_df['temperature at tor stop'] = combined_datalogger_df['temperature at tor stop'].round(2)\n",
-        "\n",
-        "    # Format min/max temperature columns to 2 decimal places in the summary df\n",
-        "    total_tor_summary_df['Min Temperature'] = total_tor_summary_df['Min Temperature'].round(2)\n",
-        "    total_tor_summary_df['Max Temperature'] = total_tor_summary_df['Max Temperature'].round(2)\n",
-        "\n",
         "\n",
         "    # Rearrange columns to have 'Logger ID' first, then 'Number'\n",
         "    final_combined_df = combined_datalogger_df[['Logger ID', 'Number', 'TOR start', 'temperature at tor start', 'TOR stop', 'temperature at tor stop', 'Excursion duration']]\n",
         "\n",
-        "    # print(\"--- Combined TOR Excursion Details with Logger ID, Number, and Temperatures ---\")\n",
+        "    print(\"--- Combined TOR Excursion Details with Logger ID, Number, and Temperatures ---\")\n",
         "    display(final_combined_df)\n",
         "\n",
         "    print(\"\\n--- Total Time Out of Refrigerator (TOR) per Logger ID, Min/Max Temperature, and Datetime ---\")\n",
@@ -267,7 +254,7 @@
         "    total_tor_summary_df = total_tor_summary_df[['Logger ID', 'Total TOR', 'Min Temperature', 'Min Temp Datetime', 'Max Temperature', 'Max Temp Datetime']]\n",
         "    display(total_tor_summary_df)\n",
         "\n",
-        "    # --- 7. EXPORT TO EXCEL ---\n",
+        "    # --- EXPORT TO EXCEL ---\n",
         "    output_excel_path = \"/content/datalogger/tor_analysis_results.xlsx\"\n",
         "    with pd.ExcelWriter(output_excel_path) as writer:\n",
         "        final_combined_df.to_excel(writer, sheet_name='Excursion Details', index=False)\n",
