--- a/Data_Logger.ipynb
+++ b/Data_Logger.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5ffofGRJJopUT2ZkFV2tp",
+      "authorship_tag": "ABX9TyOJZiOUC1UC8LY+ZEswNjRl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
         "        print(\"Sai format. Thử lại.\")\n",
         "\n",
         "# --- GET USER INPUT FOR TOR TEMPERATURE THRESHOLD ---\n",
-        "print(\"\\nStep 2: Nhiệt độ giới hạn của nguyên liệu\")\n",
+        "print(\"\\nStep 2: Giới hạn nhiệt độ của nguyên liệu\")\n",
         "while True:\n",
         "    try:\n",
         "        tor_threshold_temp = float(input(\"Nhập nhiệt độ (°C): \"))\n",
