--- a/Data_Logger.ipynb
+++ b/Data_Logger.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJZiOUC1UC8LY+ZEswNjRl",
+      "authorship_tag": "ABX9TyNad2Oxsu9V4L7DtAWFHScr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,18 @@
         "import pandas as pd\n",
         "import re\n",
         "import os\n",
+        "import sys\n",
+        "import subprocess\n",
+        "\n",
+        "# --- CHECK AND INSTALL DEPENDENCIES ---\n",
+        "required_packages = ['tabula-py', 'jpype1']\n",
+        "for package in required_packages:\n",
+        "    try:\n",
+        "        __import__(package)\n",
+        "    except ImportError:\n",
+        "        print(f\"{package} not found. Installing...\")\n",
+        "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", package])\n",
+        "        print(f\"{package} installed successfully.\")\n",
         "\n",
         "# --- SETUP DIRECTORY AND LIST PDF FILES ---\n",
         "datalogger_dir = '/content/datalogger/'\n",
